resolve some z-index issues with autocomplete address

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,4 +10,5 @@
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   height: 100vh;
   width: 100vw;
+  z-index: 1050 !important;
 }
